<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Where did I park?</string>
    <string name="bottom">The World\'s Greatest Photosharing App.</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Add a caption for photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="use_camera">Use camera</string>

    <string name="remember_this">Remember This</string>
    <string name="return_to_my_car">Return to My Car</string>
    <string name="shared_location">Shared Locations</string>
    <string name="my_history">My History</string>
    <string name="recently_empty_spots">Recently Empty Spots</string>

    <string name="use_map">Use Map</string>
    <string name="street_view">Street View</string>
    <string name="use_picture">Take a Picture</string>
    <string name="use_current">Use Current</string>
    <string name="confirm">Confirm</string>
    <string name="view_map">View Map</string>
    <string name="route_planning">Route Planning</string>
    <string name="view_picture">View Picture</string>
    <string name="share_location">Share This Location</string>
    <string name="leave">Leave</string>

    <string name="imagePage">View Sample Images</string>
    <string name="streamPage">View Streams</string>
    <string name="streamImagePage">View A Stream</string>
    <string name="nearbyPage">View Nearby</string>
    <string name="searchPage">Search Words</string>
    <string name="subscriptions">My Subscribed Streams</string>
    <string name="edit_message">Enter Search Word</string>
    <string name="more_images">More Images</string>
    <string name="more_search">More Results</string>

    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="title_activity_display_images">DisplayImages</string>
    <string name="title_activity_display_streams">Display Streams</string>
    <string name="title_activity_display_streamimages">Display A Stream</string>
    <string name="title_activity_display_nearbyimages">Display Nearby Images</string>
    <string name="title_activity_display_search">Search Words</string>
    <string name="title_activity_display_subscriptions">View My Subscriptions</string>

    <string name="title_activity_image_upload">Image Upload</string>
    <string name="title_activity_camera_capture">Camera Capture</string>


    <string name="title_activity_remember_this">Remember This</string>
    <string name="title_activity_return_to_my_car">Return to My Car</string>
    <string name="title_activity_shared_locations">Shared Locations</string>
    <string name="title_activity_my_history">My History</string>
    <string name="title_activity_recently_empty_spots">Recently Empty Spots</string>

    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--Map-->
    <string name="none_map">None</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>


        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="traffic">Traffic</string>
    <string name="my_location">My Location</string>
    <string name="buildings">Buildings</string>
    <string name="indoor">Indoor</string>
    <string name="panning">Panning Gestures</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="streetnames">Street Names</string>
    <string name="navigation">Navigation</string>
    <string name="go_to_car">To Car</string>
    <string name="go_to_current">To Current</string>

</resources>
