<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/response_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Homepage">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dip">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:enabled="false" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_button_name"
                android:enabled="false" />

            <Button
                android:id="@+id/revoke_access_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoke_access_button_name"
                android:enabled="false" />
            </LinearLayout>

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/status_signed_out" />

        <TextView
            android:text="@string/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:paddingBottom = "10sp"
            />

        <Button
            android:id="@+id/remember_this"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remember_this"
            android:onClick="rememberThis"
            />

        <Button
            android:id="@+id/return_to_my_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/return_to_my_car"
            android:onClick="returnToMyCar"
            />

        <Button
            android:id="@+id/my_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_history"
            android:onClick="myHistory"
            />

        <Button
            android:id="@+id/shared_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shared_location"
            android:onClick="sharedLocation"
            />

        <Button
            android:id="@+id/recently_empty_spots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recently_empty_spots"
            android:onClick="recentlyEmptySpots"
            />

    </LinearLayout>
</ScrollView>